# ChangeLog for dev-libs/crypto++
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.75 2012/06/26 14:49:44 vapier Exp $

  26 Jun 2012; Mike Frysinger <vapier@gentoo.org>
  +files/crypto++-5.6.1-gcc-4.7.patch, crypto++-5.6.1-r3.ebuild:
  Add fix from upstream tracker for building with gcc-4.7 #403197 by Kacper
  Kowalik.

*crypto++-5.6.1-r3 (30 Jan 2012)

  30 Jan 2012; Dane Smith <c1pher@gentoo.org> -crypto++-5.6.1-r2.ebuild,
  +crypto++-5.6.1-r3.ebuild, +files/crypto++-5.6.1-r3-fix_build_system.patch:
  Address NEEDED library issues wrt bug 401431. Thanks Arfrever for the patch.
  Add new patch (updated fix_build_system patch) for r3 since the current one
  is
  used by the stable -r1. The new patch includes the changes that are in the
  patch {P}-sunos. This should be dropped when -r3 goes stable and -r1 is
  dropped.
  Drop -r2.

*crypto++-5.6.1-r2 (28 Dec 2011)

  28 Dec 2011; Patrick Lauer <patrick@gentoo.org> +crypto++-5.6.1-r2.ebuild,
  +files/crypto++-5.6.1-rijndael.patch:
  Fixing #322713 again, this time with upstream patch

  27 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -crypto++-5.5.2-r1.ebuild, -crypto++-5.6.0.ebuild, -crypto++-5.6.0-r1.ebuild,
  -files/crypto++-5.6.0-fix_build_system.patch, -crypto++-5.6.1.ebuild:
  Delete.

  27 Feb 2011; Tobias Klausmann <klausman@gentoo.org> crypto++-5.6.1-r1.ebuild:
  Stable on alpha, bug #343373

  26 Feb 2011; Michael Weber <xmw@gentoo.org> crypto++-5.6.1-r1.ebuild:
  sparc stable (bug 343373)

  20 Jan 2011; Markos Chandras <hwoarang@gentoo.org> crypto++-5.6.1-r1.ebuild:
  Stable on amd64 wrt bug #343373

  10 Jan 2011; Brent Baude <ranger@gentoo.org> crypto++-5.6.1-r1.ebuild:
  stable ppc, bug 343373

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  crypto++-5.6.1-r1.ebuild:
  Copy hppa/ppc64/x86 keywords from 5.6.1.

*crypto++-5.6.1-r1 (08 Jan 2011)
