@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/crypto++
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.75 2012/06/26 14:49:44 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/crypto++/ChangeLog,v 1.76 2012/11/04 19:41:44 c1pher Exp $
+
+  04 Nov 2012; Dane Smith <c1pher@gentoo.org> crypto++-5.6.1-r1.ebuild,
+  crypto++-5.6.1-r3.ebuild:
+  Add libtool to DEPEND wrt bug 440690.
 
   26 Jun 2012; Mike Frysinger <vapier@gentoo.org>
   +files/crypto++-5.6.1-gcc-4.7.patch, crypto++-5.6.1-r3.ebuild:
